--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = chasinaidil
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.chasinaidil
+PRODUCT_BUNDLE_IDENTIFIER = one.nasroni.chasinaidil
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 one.nasroni. All rights reserved.
