--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,16 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  isar: ^3.0.5
+  isar_flutter_libs: ^3.0.5
+  flutter_localization: ^0.1.9
 
 dev_dependencies: 
+  build_runner: ^2.3.3
   flutter_lints: 2.0.1
   flutter_test: 
     sdk: flutter
+  isar_generator: ^3.0.5
 
 flutter: 
   uses-material-design: true
