--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   isar: ^3.0.5
   isar_flutter_libs: ^3.0.5
   flutter_localization: ^0.1.9
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies: 
   build_runner: ^2.3.3
