--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   flutter_test: 
     sdk: flutter
   isar_generator: ^3.0.5
+  package_rename: ^1.0.0+1
 
 flutter: 
   uses-material-design: true
@@ -48,3 +49,12 @@ flutter:
         - asset: fonts/NotoSansMono-Regular.ttf
         - asset: fonts/NotoSansMono-Bold.ttf
           weight: 700
+
+package_rename_config:
+  android:
+    app_name: chasinaiDilNew
+    package_name: one.nasroni.chasinaidilNew
+  ios:
+    app_name: chasinaiDil
+    bundle_name: chasinaidil
+    package_name: one.nasroni.chasinaidil
