--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   gesture_x_detector: ^1.1.1
+  get_storage: ^2.0.3
 
 dev_dependencies: 
   build_runner: ^2.3.3
