--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chasinaidil
-version: 1.0.0+1
+version: 2.0.0+13
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -25,6 +25,8 @@ dev_dependencies:
     sdk: flutter
   isar_generator: ^3.0.5
   package_rename: ^1.0.0+1
+  flutter_launcher_icons: ^0.11.0
+
 
 flutter: 
   uses-material-design: true
@@ -53,9 +55,27 @@ flutter:
 
 package_rename_config:
   android:
-    app_name: chasinaiDilNew
-    package_name: one.nasroni.chasinaidilNew
+    app_name: "Хазинаи Дил"
+    package_name: one.nasroni.chasinaidil
   ios:
-    app_name: chasinaiDil
+    app_name: "Хазинаи Дил"
     bundle_name: chasinaidil
     package_name: one.nasroni.chasinaidil
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/appicon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: false
+    #image_path: "path/to/image.png"
+    #background_color: "#hexcode"
+    #theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icon/appicon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icon/appicon.png"
