--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chasinaidil
-version: 2.0.0+13
+version: 2.0.1+13
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -53,29 +53,30 @@ flutter:
         - asset: fonts/NotoSansMono-Bold.ttf
           weight: 700
 
-package_rename_config:
-  android:
-    app_name: "Хазинаи Дил"
-    package_name: one.nasroni.chasinaidil
-  ios:
-    app_name: "Хазинаи Дил"
-    bundle_name: chasinaidil
-    package_name: one.nasroni.chasinaidil
+# package_rename_config:
+#   android:
+#     app_name: "Хазинаи Дил"
+#     package_name: one.nasroni.chasinaidil
+#   ios:
+#     app_name: "Хазинаи Дил"
+#     bundle_name: chasinaidil
+#     package_name: one.nasroni.chasinaidil
 
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/icon/appicon.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
-  web:
-    generate: false
-    #image_path: "path/to/image.png"
-    #background_color: "#hexcode"
-    #theme_color: "#hexcode"
-  windows:
-    generate: true
-    image_path: "assets/icon/appicon.png"
-    icon_size: 48 # min:48, max:256, default: 48
-  macos:
-    generate: true
-    image_path: "assets/icon/appicon.png"
+# flutter_icons:
+#   android: "launcher_icon"
+#   image_path: "assets/icon/appicon.png"
+#   image_path_ios: "assets/icon/appicon_ios.png"
+#   ios: false
+#   min_sdk_android: 21 # android min sdk min:16, default 21
+#   web:
+#     generate: false
+#     #image_path: "path/to/image.png"
+#     #background_color: "#hexcode"
+#     #theme_color: "#hexcode"
+#   windows:
+#     generate: true
+#     image_path: "assets/icon/appicon.png"
+#     icon_size: 48 # min:48, max:256, default: 48
+#   macos:
+#     generate: true
+#     image_path: "assets/icon/appicon.png"
