--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   gesture_x_detector: ^1.1.1
   get_storage: ^2.0.3
+  share_plus: ^6.3.0
 
 dev_dependencies: 
   build_runner: ^2.3.3
