Loading screen for initial start up (db update)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ flutter:
    - assets/chasinaidil/songs.json
    - assets/chasinaidil/text/
    - assets/chasinaidil/covers/
+   - assets/icon/
+   - assets/graphics/
 
   fonts:
     - family: UbuntuMono
