--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   hexcolor: ^3.0.1
   pdfx: ^2.3.0
   pdf_render: ^1.3.6
+  just_audio: ^0.9.31
+  just_audio_background: ^0.0.1-beta.9
+  assets_audio_player: ^3.0.6
 
 dev_dependencies: 
   build_runner: ^2.3.3
