--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   pdf_render: ^1.3.6
   assets_audio_player: ^3.0.6
   al_downloader: ^1.7.2
+  path_provider: ^2.0.13
 
 dev_dependencies: 
   build_runner: ^2.3.3
