--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   assets_audio_player: ^3.0.6
   al_downloader: ^1.7.2
   path_provider: ^2.0.13
+  liquid_progress_indicator: ^0.4.0
 
 dev_dependencies: 
   build_runner: ^2.3.3
