--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,12 @@ dependencies:
   flutter_randomcolor: ^1.0.14
   hexcolor: ^3.0.1
   pdf_render: ^1.3.6
-  assets_audio_player: ^3.0.6
+  #assets_audio_player: ^3.0.6
   al_downloader: ^1.7.2
   path_provider: ^2.0.13
   liquid_progress_indicator: ^0.4.0
+  just_audio: ^0.9.31
+  just_audio_background: ^0.0.1-beta.9
 
 dev_dependencies: 
   build_runner: ^2.3.3
