--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   liquid_progress_indicator: ^0.4.0
   just_audio: ^0.9.31
   just_audio_background: ^0.0.1-beta.9
+  crypto: ^3.0.2
 
 dev_dependencies: 
   build_runner: ^2.3.3
