--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="one.nasroni.chasinaidil">
+    package="one.nasroni.chasinaidil"
+    >
     <uses-permission android:name="android.permission.INTERNET" />
 
-   <application
+
+    <application
         android:label="Хазинаи Дил"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
