--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chasinaidil
-version: 3.0.0+23
+version: 3.0.1+24
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -29,6 +29,9 @@ dependencies:
   just_audio: ^0.9.31
   just_audio_background: ^0.0.1-beta.9
   crypto: ^3.0.2
+  audio_service: ^0.18.9
+  flutter_archive: ^5.0.0
+  file_picker: ^5.2.5
 
 dev_dependencies: 
   build_runner: ^2.3.3
