Enable wakelock when viewing lyrics

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chasinaidil
-version: 3.2.2+28
+version: 3.2.4+30
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -32,6 +32,7 @@ dependencies:
   audio_service: ^0.18.9
   flutter_archive: ^5.0.0
   file_picker: ^5.2.5
+  wakelock: ^0.6.2
 
 dev_dependencies: 
   build_runner: ^2.3.3
