Renaming of chashma

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,9 +52,9 @@ flutter:
    - assets/chasinaidil/text/
    - assets/chasinaidil/covers/
    - assets/chasinaidil/sheet/
-   - assets/chashma/songs.json
-   - assets/chashma/text/
-   - assets/chashma/covers/
+   - assets/tshashma/songs.json
+   - assets/tshashma/text/
+   - assets/tshashma/covers/
    - assets/icon/
    - assets/graphics/
 
