--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chasinaidil
-version: 3.2.6+32
+version: 3.2.7+33
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -7,7 +7,7 @@ environment:
 
 dependencies: 
   cupertino_icons: ^1.0.2
-  get: 4.6.5
+  get: ^4.6.6
   flutter: 
     sdk: flutter
   isar: ^3.0.5
@@ -36,7 +36,7 @@ dependencies:
 
 dev_dependencies: 
   build_runner: ^2.3.3
-  flutter_lints: 2.0.1
+  flutter_lints: ^2.0.3
   flutter_test: 
     sdk: flutter
   isar_generator: ^3.0.5
