--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chasinaidil
-version: 3.2.10+36
+version: 3.2.11+37
 publish_to: none
 description: A new Flutter project.
 environment: 
@@ -12,12 +12,12 @@ dependencies:
     sdk: flutter
   isar: ^3.0.5
   isar_flutter_libs: ^3.0.5
-  flutter_localization: ^0.1.9
+  flutter_localization: ^0.2.1
   flutter_localizations:
     sdk: flutter
   gesture_x_detector: ^1.1.1
   get_storage: ^2.0.3
-  share_plus: ^6.3.1
+  share_plus: ^10.0.0
   flutter_animate: ^4.1.0
   flutter_randomcolor: ^1.0.14
   hexcolor: ^3.0.1
@@ -26,17 +26,17 @@ dependencies:
   al_downloader: ^1.7.2
   path_provider: ^2.0.13
   liquid_progress_indicator_v2: ^0.5.0
-  just_audio: ^0.9.31
+  just_audio: ^0.9.39
   just_audio_background: ^0.0.1-beta.9
   crypto: ^3.0.2
   audio_service: ^0.18.9
-  flutter_archive: ^5.0.0
-  file_picker: ^5.2.5
-  wakelock: ^0.6.2
+  flutter_archive: ^6.0.3
+  file_picker: ^8.0.7
+  wakelock_plus: ^1.2.8
 
 dev_dependencies: 
   build_runner: ^2.3.3
-  flutter_lints: ^2.0.3
+  flutter_lints: ^4.0.0
   flutter_test: 
     sdk: flutter
   isar_generator: ^3.0.5
